# ichat

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  compose.prod.yml  compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260516_0001_create_core_tables.py  20260519_0002_add_conversation_activation.py  20260521_0003_add_reasoning_support.py  20260611_0004_add_run_provider_options.py  20260611_0005_add_web_search_transcript.py  20260618_0006_add_public_id.py  20260618_0007_add_share_links.py  20260621_0008_email_verification_infra.py
app/: __init__.py  main.py
app/context/: __init__.py  builder.py
app/core/: __init__.py  config.py  errors.py  logging.py
app/db/: session.py  sync_session.py
app/models/: __init__.py  auth_token.py  conversation.py  email_outbox.py  run.py  user.py
app/prompts/: __init__.py  base_system_prompt.md  builder.py
app/providers/: __init__.py  deepseek.py  deepseek_parser.py  registry.py  types.py
app/schemas/: auth.py  capabilities.py  conversations.py  responses.py  runs.py  shares.py
app/search/: __init__.py  client.py  postprocess.py  query_planner.py  registry.py  tavily.py  types.py
app/tasks/: celery_app.py  email_tasks.py
app/tools/: __init__.py  types.py  web_search.py
app/worker/: __init__.py  __main__.py  executor.py  main.py  notify_listener.py  title.py
deploy/: nginx.conf
docs/: README.md  deployment.md
docs/architecture/: module-boundaries.md  overview.md
docs/goals/: 2026-06-10-frontend-edit-regenerate-and-auto-title.md  2026-06-10-frontend-tailwind-v4-styles.md  2026-06-10-frontend-toast-and-bottomsheet.md
docs/handover/: 2026-05-16-db-models.md  2026-05-16-mvp-infra.md  2026-05-16-project-foundation.md  2026-05-17-auth-and-response-envelope.md  2026-05-17-conversation-module.md  2026-05-17-deepseek-smoke.md  2026-05-17-provider-and-worker.md  (+13 more)
frontend/: api.js  app.js  auth.js  eslint.config.js  index.html  package.json  pnpm-lock.yaml  sse.js  state.js  styles.css  tsconfig.app.json  ui.js  vite.config.ts
scripts/: web_search_worker_smoke.py
tests/: conftest.py
(+244 files in other folders)
