[project]
name = "ichat"
version = "0.1.0"
description = "AIChat backend service"
readme = "docs/superpowers/specs/2026-05-16-ai-chat-backend-mvp-design.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic",
    "asyncpg",
    "celery[redis]",
    "email-validator",
    "fastapi",
    "httpx",
    "loguru>=0.7.3",
    "psycopg[binary]",
    "pydantic-settings",
    "pwdlib[argon2]",
    "pyjwt[crypto]",
    "python-dotenv",
    "redis",
    "sqlalchemy[asyncio]",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "fakeredis[lua]",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fakeredis.*"
ignore_missing_imports = true
